[FEAT] Created a first version of the navbar

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,9 @@
-<p>
-  header works!
-</p>
+<mat-toolbar color="primary">
+  <span class="navBarItem"><a href="">CDBICON</a></span>
+  <span class="navBarItem"><a href="">Companies</a></span>
+  <span class="navBarItem"><a href="">Computers</a></span>
+  <span class="example-spacer"></span>
+  <button >Log out</button>
+  <mat-icon class="example-icon">flag</mat-icon>
+  <mat-icon class="example-icon">flag</mat-icon>
+</mat-toolbar>
