[FEAT] add bootstrap + tests for footer

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,11 @@
-<p>
-  footer works!
-</p>
+<mat-toolbar color="primary">
+  <mat-toolbar-row>
+    Footer0
+    <span class="example-spacer"></span>
+    Footer1
+    <span class="example-spacer"></span>
+    <span>10</span>
+    <span>20</span>
+    <span>100</span>
+  </mat-toolbar-row>
+</mat-toolbar>
