[FEAT] footer skin done

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,11 +1,25 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
-    Footer0
+    <div id="footer-copyright">Computer Database 2018&nbsp;&#169;</div>
     <span class="example-spacer"></span>
-    Footer1
+
+    <div class="pagination">
+      <a class="disabled btn btn-default"><<</a>
+      <a mat-button class="active btn btn-default"><</a>
+      <a mat-button class="active btn btn-default">1</a>
+      <a mat-button class="active btn btn-default">2</a>
+      <a mat-button class="active btn btn-default">3</a>
+      <a mat-button class="active btn btn-default">></a>
+      <a mat-button class="active btn btn-default">>></a>
+    </div>
+
     <span class="example-spacer"></span>
-    <span>10</span>
-    <span>20</span>
-    <span>100</span>
+
+    <div class="button-row">
+      <button mat-button color="basic">10</button>
+      <button mat-button color="basic">20</button>
+      <button mat-button color="basic">100</button>
+    </div>
+
   </mat-toolbar-row>
 </mat-toolbar>
