--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,3 +1,17 @@
 .example-spacer {
   flex: 1 1 auto;
 }
+
+#footer-copyright {
+  font-size: small;
+}
+
+.button-row {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.mat-button {
+  min-width: 1%;
+}
