--- a/src/app/company/companies/companies.component.html
+++ b/src/app/company/companies/companies.component.html
@@ -1,3 +1,21 @@
-<p>
-  companies works!
-</p>
+<div class="container" *ngIf="companies">
+  <mat-form-field class="example-full-width">
+    <input matInput placeholder="Search" [(ngModel)]="searchValue">
+  </mat-form-field>&nbsp;
+  <mat-checkbox>Companies</mat-checkbox>&nbsp;
+  <mat-checkbox>Computers</mat-checkbox>&nbsp;
+  <button mat-raised-button color="primary" (click)="search()">Search</button>
+  <table class="customTable">
+    <thead>
+        <th>Id</th>
+        <th>Name</th>
+        <th>See computers</th>
+        <th>Delete</th>
+    </thead>
+    <tr *ngFor=" let company of companies"
+      app-company [company] = "company"
+      (delete)="recipeDeleted(company)">
+    </tr>
+  </table>
+</div>
+
