--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary">
+<mat-toolbar color="primary" class="footer">
   <mat-toolbar-row>
     <div id="footer-copyright">Computer Database 2018&nbsp;&#169;</div>
     <span class="example-spacer"></span>
