--- a/src/app/company/companies/companies.component.html
+++ b/src/app/company/companies/companies.component.html
@@ -10,8 +10,8 @@
     <button mat-raised-button color="primary" (click)="create()">Create a new company</button>
   </mat-card>
   <br>
-  <table class="customTable" class="row">
-    <thead>
+  <table class="customTable">
+    <thead >
         <th>Name</th>
         <th>See computers</th>
         <th>Delete</th>
