--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<app-header (switchLanguage)="useLanguage($event)"></app-header>
 &nbsp;
 <router-outlet></router-outlet>
 
