--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,12 +3,12 @@
         <a href="/company">computer</a>
     </mat-icon>
 
-  <span class="navBarItem"><a href="/company">Companies</a></span>
-  <span class="navBarItem"><a href="/computer">Computers</a></span>
+  <span class="navBarItem" ><a href="/company">{{ 'HEADER.COMPANIES' | translate }}</a></span>
+  <span class="navBarItem" ><a href="/computer">{{ 'HEADER.COMPUTERS' | translate }}</a></span>
 
   <span class="spacer"></span>
 
-  <button mat-button *ngIf="isLoggedIn">Log out</button>
-  <mat-icon class="navBarItem flag"><a href=""><img src="assets/france.svg" alt="France flag"></a></mat-icon>
-  <mat-icon class="navBarItem flag"><a href=""><img src="assets/united-kingdom.svg" alt="UK flag"></a></mat-icon>
+  <button mat-button *ngIf="isLoggedIn">{{ 'HEADER.LOG_OUT' | translate }}</button>
+  <mat-icon class="navBarItem flag"><img src="assets/france.svg" alt="France flag" (click)="switchTo('fr')"></mat-icon>
+  <mat-icon class="navBarItem flag"><img src="assets/united-kingdom.svg" alt="UK flag" (click)="switchTo('en')"></mat-icon>
 </mat-toolbar>
