--- a/src/app/company/companies/companies.component.html
+++ b/src/app/company/companies/companies.component.html
@@ -28,23 +28,11 @@
     <div id="footer-copyright">Computer Database 2018&nbsp;&#169;</div>
     <span class="example-spacer"></span>
 
-    <div class="pagination">
-      <a class="disabled btn btn-default"><<</a>
-      <a mat-button class="active btn btn-default"><</a>
-      <a mat-button class="active btn btn-default">1</a>
-      <a mat-button class="active btn btn-default">2</a>
-      <a mat-button class="active btn btn-default">3</a>
-      <a mat-button class="active btn btn-default">></a>
-      <a mat-button class="active btn btn-default">>></a>
-    </div>
-
-    <span class="example-spacer"></span>
-
-    <div class="button-row">
-      <button mat-button color="basic">10</button>
-      <button mat-button color="basic">20</button>
-      <button mat-button color="basic">100</button>
-    </div>
+    <mat-paginator *ngIf="pageEvent" [length]="pageEvent.length"
+                   [pageSize]="pageEvent.pageSize"
+                   [pageSizeOptions]="pageSizeOptions"
+                   (page)="pageEvent = $event">
+    </mat-paginator>
 
   </mat-toolbar-row>
 </mat-toolbar>
