Added login validation on both creation and login pages

--- a/src/app/company/company.component.html
+++ b/src/app/company/company.component.html
@@ -6,7 +6,7 @@
   </button>
 </td>
 <td>
-  <button mat-raised-button color="alert" (click)="deleteCompany(company)">
+  <button mat-raised-button color="warn" (click)="deleteCompany(company)">
     <mat-icon>delete</mat-icon>
     Delete company
   </button>
