--- a/src/app/login/login-create/login-create.component.html
+++ b/src/app/login/login-create/login-create.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <mat-card class="example-card">
     <mat-card-header>
-      <mat-card-title>Login</mat-card-title>
+      <mat-card-title color="primary">Account creation</mat-card-title>
     </mat-card-header>
     <mat-card-content>
       <form class="example-form" [formGroup]="loginForm">
@@ -10,7 +10,7 @@
             <td>
               <mat-form-field class="example-full-width">
                 <input matInput placeholder="Username" formControlName="username" required>
-                <mat-error>There is an error</mat-error>
+                <mat-error>Username must be at least 5 characters long and musn't contain whitespaces.</mat-error>
               </mat-form-field>
             </td>
           </tr>
@@ -18,18 +18,18 @@
             <td>
               <mat-form-field class="example-full-width">
                 <input matInput placeholder="Password" type="password" formControlName="password" required>
-                <mat-error>There is an error 2</mat-error>
+                <mat-error>Password must be at least 8 characters long and contain at least one digit, one lowercase character and one uppercase character.</mat-error>
               </mat-form-field>
             </td>
           </tr>
           <tr>
-              <td>
-                <mat-form-field class="example-full-width">
-                  <input matInput placeholder="Confirm password" type="password" formControlName="passwordConfirmation" required>
-                  <mat-error>There is an error 3</mat-error>
-                </mat-form-field>
-              </td>
-            </tr>
+            <td>
+              <mat-form-field class="example-full-width">
+                <input matInput placeholder="Confirm password" type="password" formControlName="passwordConfirmation" required>
+                <mat-error>Password confirmation doesn't match the passwrd.</mat-error>
+              </mat-form-field>
+            </td>
+          </tr>
         </table>
       </form>
     </mat-card-content>
