--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,6 +1,11 @@
 .example-card {
-  max-width: 400px;
+  max-width: 800px;
+  width: 800px;
   margin-bottom: 20px;
+}
+
+.example-full-width {
+  width: 100%;
 }
 
 .container{
