--- a/src/theme.scss
+++ b/src/theme.scss
@@ -26,7 +26,7 @@ $md-accent: mat-palette($mat-purple, 500, 300, 800);
 $md-warn: mat-palette($mat-red, 500, 300, 900);
 
 $my-theme-foreground: (
-  base: red ,
+  base: black ,
   divider: $dark-dividers,
   dividers: $dark-dividers,
   disabled: $dark-disabled-text,
@@ -36,7 +36,7 @@ $my-theme-foreground: (
   secondary-text: $dark-secondary-text,
   icon: rgba(red, 0.54),
   icons: rgba(red, 0.54),
-  text: rgba(red, 0.87),
+  text: rgba(black, 0.87),
   slider-min: rgba(red, 0.87),
   slider-off: rgba(red, 0.26),
   slider-off-active: rgba(red, 0.38),
