--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,7 @@ body { margin: 5px; }
 .customTable {
   font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
   border-collapse: collapse;
+  width:100%;
 }
 
 .customTable td, #customers th {
