--- a/src/app/company/company-create/company-create.component.html
+++ b/src/app/company/company-create/company-create.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <!-- <mat-card class="example-card"> -->
-    <div class="example-container modal-theme">
+    <div class="example-container">
       <form class="example-container" [formGroup]=companyAddForm>
         <mat-form-field>
           <input matInput placeholder="Name" required formControlName="name" name="name" />
