--- a/src/app/company/companies/companies.component.html
+++ b/src/app/company/companies/companies.component.html
@@ -1,6 +1,6 @@
 <div class="container" *ngIf="companies" @staggerAnim>
 
-  <div class="controlBar background-color-primary">
+  <div class="controlBar">
     <div>
 
       <mat-form-field>
@@ -8,10 +8,12 @@
         <input matInput placeholder="Search" [(ngModel)]="searchValue">
       </mat-form-field>
 
-      <button mat-raised-button color="primary" (click)="search()">Search</button>
       <button mat-icon-button (click)="clearSearch()">
         <mat-icon aria-label="Clear search" color="warn">clear</mat-icon>
       </button>
+
+      <button mat-raised-button color="primary" (click)="search()">Search</button>
+
     </div>
 
     <div class="controlBarRight">
@@ -20,16 +22,17 @@
 
   </div>
 
-
-  <table class="customTable">
+  <div class="row">
+  <table class="customTable table table-bordered col-12">
     <thead>
-    <th>Name</th>
-    <th>See computers</th>
-    <th>Delete</th>
+    <th class="col-8">Name</th>
+    <th class="col-2">See computers</th>
+    <th class="col-2">Delete</th>
     </thead>
-    <tr *ngFor=" let company of companies" app-company [company]="company" (delete)="recipeDeleted(company)">
+    <tr *ngFor=" let company of companies" app-company [company]="company" (delete)="companyDeleted(company)">
     </tr>
   </table>
+  </div>
 
   <mat-paginator #paginator *ngIf="pageEvent" [length]="pageEvent.length"
                  [pageSize]="pageEvent.pageSize"
@@ -39,7 +42,7 @@
   </mat-paginator>
 </div>
 
-<mat-toolbar color="primary" class="footer">
+<mat-toolbar color="accent" class="footer">
   <span class="example-spacer"></span>
   <div id="footer-copyright">Computer Database 2018&nbsp;&#169;</div>
   <span class="example-spacer"></span>
