--- a/src/app/company/company-create/company-create.component.html
+++ b/src/app/company/company-create/company-create.component.html
@@ -18,7 +18,8 @@
 
         <!-- <div>Add computer <mat-icon style="-webkit-text-fill-color: #6ba945" aria-label="Add a company" class="mat-icon material-icons" role="img" aria-hidden="true">add_circle</mat-icon></div> -->
 
-        <button mat-raised-button class="confirm" (click)=submit()>Confirmer</button>
+        <button mat-raised-button color="primary" (click)=submit()>Confirmer</button>
+
       </form>
     </div>
   <!-- </mat-card> -->
