--- a/src/app/company/company.component.html
+++ b/src/app/company/company.component.html
@@ -1,13 +1,11 @@
 <td>{{company.name}}</td>
-<td>
+<td class="text-center" >
   <button mat-raised-button color="primary">
     <mat-icon>computer</mat-icon>
-    List computers
   </button>
 </td>
-<td>
+<td class="text-center">
   <button mat-raised-button color="warn" (click)="deleteCompany(company)">
     <mat-icon>delete</mat-icon>
-    Delete company
   </button>
 </td>
