--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary">
+<mat-toolbar color="accent">
   <button mat-button [routerLink]="['/company']">
     <mat-icon class="logo" >computer</mat-icon>
   </button>
