--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,20 +1,9 @@
 body { margin: 5px; }
 
 @import '~@angular/material/prebuilt-themes/pink-bluegrey.css';
+
 $primary: rgb(22, 90, 168);
-
-.customTable {
-  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-  border-collapse: collapse;
-  width:100%;
-}
-
-.customTable td, #customers th {
-  border: 1px solid #ddd;
-  padding: 8px;
-  text-align: left;
-  width: 100%;
-}
+$basic:  #4f545a;
 
 .customTable tr:nth-child(even){background-color: #f2f2f2;}
 
@@ -24,8 +13,12 @@ $primary: rgb(22, 90, 168);
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: center;
-  background-color: $primary;
   color: white;
+  background-color: $basic;
+}
+
+button {
+  color:white;
 }
 
 
