Added page change when deleting last item of page

--- a/src/theme.scss
+++ b/src/theme.scss
@@ -140,7 +140,7 @@ $my-theme-foreground: (
   secondary-text: $dark-secondary-text,
   icon: rgba(red, 0.54),
   icons: rgba(red, 0.54),
-  text: white,
+  text: rgba(black, 0.87),
   slider-min: rgba(red, 0.87),
   slider-off: rgba(red, 0.26),
   slider-off-active: rgba(red, 0.38),
