--- a/src/app/company/companies/companies.component.html
+++ b/src/app/company/companies/companies.component.html
@@ -23,11 +23,11 @@
   </div>
 
   <div class="row">
-  <table class="customTable table table-bordered col-12">
+  <table class="customTable table table-bordered">
     <thead>
-    <th class="col-8">Name</th>
-    <th class="col-2">See computers</th>
-    <th class="col-2">Delete</th>
+    <th style="width: 66.6%">Name</th>
+    <th style="width: 16.6%">See computers</th>
+    <th style="width: 16.6%">Delete</th>
     </thead>
     <tr *ngFor=" let company of companies" app-company [company]="company" (delete)="companyDeleted(company)">
     </tr>
