[FEAT] update company now works

--- a/src/app/company/companies/companies.component.html
+++ b/src/app/company/companies/companies.component.html
@@ -34,7 +34,7 @@
   </table>
   </div>
 
-  <mat-paginator #paginator *ngIf="pageEvent" [length]="pageEvent.length"
+  <mat-paginator color="primary" #paginator *ngIf="pageEvent" [length]="pageEvent.length"
                  [pageSize]="pageEvent.pageSize"
                  [pageSizeOptions]="pageSizeOptions"
                  (page)="pageEvent = changePage($event)"
