--- a/src/app/company/company.component.html
+++ b/src/app/company/company.component.html
@@ -1,4 +1,4 @@
-<td>{{company.name}}</td>
+<td (click)="updateCompany()">{{company.name}}</td>
 <td class="text-center" >
   <button mat-raised-button color="primary">
     <mat-icon>computer</mat-icon>
