--- a/src/app/company/companies/companies.component.scss
+++ b/src/app/company/companies/companies.component.scss
@@ -48,3 +48,7 @@
 .searchIcon {
   padding-top: 12px;
 }
+
+.md-table-pagination .md-select:not([disabled]):focus .md-select-value {
+  color:black;
+}
