--- a/src/app/company/companies/companies.component.scss
+++ b/src/app/company/companies/companies.component.scss
@@ -1,4 +1,3 @@
-
 .example-spacer {
   flex: 1 1 auto;
 }
@@ -21,15 +20,12 @@
   margin-bottom: 25px;
 }
 
-.checkbox {
-  margin: 10px;
-}
-
 :host /deep/ label {
   margin: 0px !important;
 }
 
 .controlBar {
+  width: 100%;
   padding-left: 24px;
   margin-bottom: 15px;
   box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14),
@@ -45,6 +41,3 @@
   margin-right: 24px;
 }
 
-.searchIcon {
-  padding-top: 12px;
-}
