[FIX] Added shadows to company table

--- a/src/app/company/companies/companies.component.html
+++ b/src/app/company/companies/companies.component.html
@@ -1,6 +1,6 @@
 <div class="container" *ngIf="companies" @staggerAnim>
 
-  <div class="controlBar">
+  <div class="controlBar shadow">
     <div>
       <mat-form-field>
         <mat-icon matPrefix>search</mat-icon>
@@ -20,7 +20,7 @@
   </div>
 
 
-  <table class="customTable table table-bordered col-12">
+  <table class="customTable table table-bordered col-12 shadow">
     <thead>
     <th class="col-8">Name</th>
     <th class="col-2">See computers</th>
