--- a/src/app/company/company-update/company-update.component.html
+++ b/src/app/company/company-update/company-update.component.html
@@ -1,5 +1,4 @@
-<div class="container">
-  <!-- <mat-card class="example-card"> -->
+<div class="container">;
   <div class="example-container">
     <form class="example-container" [formGroup]=companyAddForm>
       <mat-form-field>
@@ -15,12 +14,8 @@
           URL should be correct [http(s):// (...) .(img|...|png)]
         </mat-error>
       </mat-form-field>
-
-      <!-- <div>Add computer <mat-icon style="-webkit-text-fill-color: #6ba945" aria-label="Add a company" class="mat-icon material-icons" role="img" aria-hidden="true">add_circle</mat-icon></div> -->
-
       <button mat-raised-button color="primary" (click)=submit()>Confirmer</button>
 
     </form>
   </div>
-  <!-- </mat-card> -->
 </div>
