--- a/src/app/company/companies/companies.component.html
+++ b/src/app/company/companies/companies.component.html
@@ -3,15 +3,20 @@
   <div class="controlBar shadow">
     <div>
       <mat-form-field>
-        <mat-icon matPrefix>search</mat-icon>
-        <input matInput placeholder="Search" [(ngModel)]="searchValue">
+          <mat-icon *ngIf="searchValue"
+                    matPrefix
+                    class="clearSearchIcon"
+                    aria-label="Clear search"
+                    (click)="clearSearch()"
+                    color="warn">clear</mat-icon>
+
+          <mat-icon *ngIf="!searchValue"
+                    matPrefix>search</mat-icon>
+
+          <input matInput placeholder="Search" [(ngModel)]="searchValue">
       </mat-form-field>
 
-      <button mat-icon-button (click)="clearSearch()">
-        <mat-icon aria-label="Clear search" color="warn">clear</mat-icon>
-      </button>
-
-      <button mat-raised-button color="primary" (click)="search()">Search</button>
+      <button mat-raised-button class="searchButton" color="primary" (click)="search()">Search</button>
     </div>
 
     <div class="controlBarRight">
@@ -19,16 +24,15 @@
     </div>
   </div>
 
-
-  <table class="customTable table table-bordered col-12 shadow">
-    <thead>
-    <th class="col-8">Name</th>
-    <th class="col-2">See computers</th>
-    <th class="col-2">Delete</th>
-    </thead>
-    <tr *ngFor=" let company of companies" app-company [company]="company" (delete)="companyDeleted(company)">
-    </tr>
-  </table>
+    <table class="customTable table table-bordered col-12 shadow">
+      <thead>
+      <th class="col-8">Name</th>
+      <th class="col-2">See computers</th>
+      <th class="col-2">Delete</th>
+      </thead>
+      <tr *ngFor=" let company of companies" app-company [company]="company" (delete)="companyDeleted(company)">
+      </tr>
+    </table>
 
   <mat-paginator #paginator *ngIf="pageEvent" [length]="pageEvent.length"
                  [pageSize]="pageEvent.pageSize"
