--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <app-header (switchLanguage)="useLanguage($event)"></app-header>
-&nbsp;
+<div class="vertical-space-top"></div>
 <router-outlet></router-outlet>
