--- a/src/app/company/companies/companies.component.scss
+++ b/src/app/company/companies/companies.component.scss
@@ -17,6 +17,10 @@
   min-width: 1%;
 }
 
+button{
+  margin: 1%;
+}
+
 .container {
   margin-bottom: 25px;
 }
@@ -30,13 +34,14 @@
 }
 
 .controlBar {
-  padding-left: 24px;
+  padding-left: 12px;
+  padding-right: 12px;
   margin-bottom: 15px;
   box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14),
     0 1px 5px 0 rgba(0, 0, 0, 0.12);
   display: flex;
   flex-direction: row;
-  flex-wrap: nowrap;
+  //flex-wrap: nowrap;
   justify-content: space-between;
 }
 
