--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,14 +1,45 @@
-<mat-toolbar color="accent">
-  <button mat-button [routerLink]="['/company']">
-    <mat-icon class="logo" >computer</mat-icon>
-  </button>
-  <button mat-button [routerLink]="['/company']">{{ 'HEADER.COMPANIES' | translate }}</button>
-  <button mat-button [routerLink]="['/computer']">{{ 'HEADER.COMPUTERS' | translate }}</button>
+<div style="height: 100vh;">
+  <mat-toolbar color="accent">
+    <mat-toolbar-row>
+      <button mat-icon-button (click)="sidenav.toggle()" fxShow="true" fxHide.gt-sm>
+        <mat-icon>menu</mat-icon>
+      </button>
+      <span>Computer Database</span>
+      <div fxShow="true" fxHide.lt-md="true">
+        <!-- The following menu items will be hidden on both SM and XS screen sizes -->
+        <button mat-button [routerLink]="['/company']">
+          <mat-icon class="logo" >computer</mat-icon>
+        </button>
+        <button mat-button [routerLink]="['/company']">{{ 'HEADER.COMPANIES' | translate }}</button>
+        <button mat-button [routerLink]="['/computer']">{{ 'HEADER.COMPUTERS' | translate }}</button>
+      </div>
+      <span class="spacer"></span>
+      <div fxShow="true" fxHide.lt-md="true">
+        <button mat-button *ngIf="isLoggedIn">{{ 'HEADER.LOG_OUT' | translate }}</button>
+        <mat-icon class="navBarItem flag"><img src="assets/france.svg" alt="France flag" (click)="switchTo('fr')"></mat-icon>
+        <mat-icon class="navBarItem flag"><img src="assets/united-kingdom.svg" alt="UK flag" (click)="switchTo('en')"></mat-icon>
+      </div>
+    </mat-toolbar-row>
+  </mat-toolbar>
 
-  <span class="spacer"></span>
+  <mat-sidenav-container fxFlexFill>
+    <mat-sidenav #sidenav>
+      <mat-nav-list>
+        <div><button mat-button [routerLink]="['/company']">{{ 'HEADER.COMPANIES' | translate }}</button></div>
+        <div><button mat-button [routerLink]="['/computer']">{{ 'HEADER.COMPUTERS' | translate }}</button></div>
+        <span class="spacer"></span>
+        <div><button mat-button *ngIf="isLoggedIn">{{ 'HEADER.LOG_OUT' | translate }}</button></div>
+        <div>
+          <mat-icon class="navBarItem flag"><img src="assets/france.svg" alt="France flag" (click)="switchTo('fr')"></mat-icon>
+          <mat-icon class="navBarItem flag"><img src="assets/united-kingdom.svg" alt="UK flag" (click)="switchTo('en')"></mat-icon>
+        </div>
+        <a (click)="sidenav.toggle()" mat-list-item>
+          <mat-icon>close</mat-icon> Close
+        </a>
+      </mat-nav-list>
+    </mat-sidenav>
 
-  <button mat-button *ngIf="isLoggedIn">{{ 'HEADER.LOG_OUT' | translate }}</button>
-  <mat-icon class="navBarItem flag"><img src="assets/france.svg" alt="France flag" (click)="switchTo('fr')"></mat-icon>
-  <mat-icon class="navBarItem flag"><img src="assets/united-kingdom.svg" alt="UK flag" (click)="switchTo('en')"></mat-icon>
-</mat-toolbar>
+    <mat-sidenav-content fxFlexFill><div class="vertical-space-top"></div><router-outlet></router-outlet></mat-sidenav-content>
+  </mat-sidenav-container>
+</div>
 
