[OPTI] footer is now in a separate component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-header (switchLanguage)="useLanguage($event)"></app-header>
 &nbsp;
 <router-outlet></router-outlet>
+<app-footer></app-footer>
