Added company deletion modal

--- a/src/app/company/company.component.html
+++ b/src/app/company/company.component.html
@@ -7,7 +7,7 @@
   </button>
 </td>
 <td class="text-center">
-  <button mat-raised-button color="warn" (click)="deleteCompany(company)">
+  <button mat-raised-button color="warn" (click)="deleteCompany()">
     <mat-icon>delete</mat-icon>
   </button>
 </td>
