--- a/src/app/company/company-update/company-update.component.html
+++ b/src/app/company/company-update/company-update.component.html
@@ -1,4 +1,4 @@
-<div class="container">;
+<div class="container">
   <div class="example-container">
     <form class="example-container" [formGroup]=companyAddForm>
       <mat-form-field>
