--- a/src/app/login/login-create/login-create.component.scss
+++ b/src/app/login/login-create/login-create.component.scss
@@ -1,16 +1,34 @@
-.example-card {
-  max-width: 800px;
-  width: 800px;
-  margin-bottom: 20px;
-}
-
-.example-full-width {
-  width: 100%;
-}
-
-.container{
+.cardContainer{
   display: flex;
   align-items: center;
   justify-content: center;
   min-height: calc(100vh - 148px)
+}
+
+.card {
+  max-width: 600;
+  width: 600px;
+  margin-bottom: 20px;
+}
+
+.center {
+  text-align: center;
+}
+
+.width-75 {
+  margin:0 auto;
+  width: 75%;
+}
+
+form {
+  margin-top:50px;
+}
+
+.full-width {
+  width:100%;
+}
+
+#registerButton {
+  margin-top:30px;
+  margin-bottom:30px;
 }
