Added Snackbars to confirm creation, deletion and edition of a company

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -39,7 +39,10 @@
       </mat-nav-list>
     </mat-sidenav>
 
-    <mat-sidenav-content fxFlexFill><div class="vertical-space-top"></div><router-outlet></router-outlet></mat-sidenav-content>
+    <mat-sidenav-content fxFlexFill>
+      <div class="vertical-space-top"></div>
+      <router-outlet></router-outlet>
+    </mat-sidenav-content>
   </mat-sidenav-container>
 </div>
 
