--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="accent" class="footer">
-  <span class="example-spacer"></span>
+  <span class="spacer"></span>
   <div id="footer-copyright">Computer Database 2018&nbsp;&#169;</div>
-  <span class="example-spacer"></span>
+  <span class="spacer"></span>
 </mat-toolbar>
