--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<div style="height: 100vh;">
+
   <mat-toolbar color="accent">
     <mat-toolbar-row>
       <button mat-icon-button (click)="sidenav.toggle()" fxShow="true" fxHide.gt-sm>
@@ -22,7 +22,7 @@
     </mat-toolbar-row>
   </mat-toolbar>
 
-  <mat-sidenav-container fxFlexFill>
+  <mat-sidenav-container>
     <mat-sidenav #sidenav>
       <mat-nav-list>
         <div><button mat-button [routerLink]="['/company']">{{ 'HEADER.COMPANIES' | translate }}</button></div>
@@ -38,8 +38,8 @@
         </a>
       </mat-nav-list>
     </mat-sidenav>
-
-    <mat-sidenav-content fxFlexFill><div class="vertical-space-top"></div><router-outlet></router-outlet></mat-sidenav-content>
+    <mat-sidenav-content fxFlexFill><div class="vertical-space-top"></div>
+      <router-outlet></router-outlet>
+    </mat-sidenav-content>
   </mat-sidenav-container>
-</div>
 
