--- a/src/app/company/companies/companies.component.scss
+++ b/src/app/company/companies/companies.component.scss
@@ -56,3 +56,19 @@ button{
 .md-table-pagination .md-select:not([disabled]):focus .md-select-value {
   color:black;
 }
+
+#scrollButton {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size:0;
+  border: none;
+  outline: none;
+  background-color: #4f545a;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 50%;
+}
