--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,11 +4,12 @@
       <button mat-icon-button (click)="sidenav.toggle()" fxShow="true" fxHide.gt-sm>
         <mat-icon>menu</mat-icon>
       </button>
-      <span>Computer Database</span>
+
       <div fxShow="true" fxHide.lt-md="true">
         <!-- The following menu items will be hidden on both SM and XS screen sizes -->
         <button mat-button [routerLink]="['/company']">
-          <mat-icon class="logo" >computer</mat-icon>
+          <mat-icon id="logoIcon" >computer</mat-icon>
+          <span>Computer Database</span>
         </button>
         <button mat-button [routerLink]="['/company']">{{ 'HEADER.COMPANIES' | translate }}</button>
         <button mat-button [routerLink]="['/computer']">{{ 'HEADER.COMPUTERS' | translate }}</button>
