--- a/src/app/company/company-update/company-update.component.html
+++ b/src/app/company/company-update/company-update.component.html
@@ -1,14 +1,18 @@
-<div class="container">
-  <div class="example-container">
-    <form class="example-container" [formGroup]=companyAddForm>
-      <mat-form-field>
+<div class="cardContainer">
+  <div>
+    <h1>Update computer</h1>
+
+    <mat-divider></mat-divider>
+
+    <form [formGroup]=companyAddForm>
+      <mat-form-field class="full-width">
         <input matInput placeholder="Name" required formControlName="name" name="name" />
         <mat-error>
           Name of company is required
         </mat-error>
       </mat-form-field>
 
-      <mat-form-field hintLabel="Max 255 characters">
+      <mat-form-field class="full-width" hintLabel="Max 255 characters">
         <input matInput #input placeholder="Url de l'image" formControlName="picture" name="picture">
         <mat-hint align="end">{{input.value?.length || 0}}/255</mat-hint>
         <mat-error>
@@ -16,8 +20,9 @@
         </mat-error>
       </mat-form-field>
 
+      <div>
       <button mat-raised-button color="primary" (click)=submit()>Confirmer</button>
-
+    </div>
     </form>
   </div>
 </div>
