--- a/src/app/company/company-create/company-create.component.html
+++ b/src/app/company/company-create/company-create.component.html
@@ -13,7 +13,7 @@
       </mat-form-field>
 
       <mat-form-field class="full-width" hintLabel="Max 255 characters">
-        <input matInput #input placeholder="Url de l'image" formControlName="picture" name="picture">
+        <input matInput #input placeholder="Url de l'image" formControlName="imageUrl" name="imageUrl">
         <mat-hint align="end">{{input.value?.length || 0}}/255</mat-hint>
         <mat-error>
           URL should be correct [http(s):// (...) .(img|...|png)]
