[FEAT] Added shadows on pagination

--- a/src/app/company/companies/companies.component.html
+++ b/src/app/company/companies/companies.component.html
@@ -38,6 +38,7 @@
                  [pageSize]="pageEvent.pageSize"
                  [pageSizeOptions]="pageSizeOptions"
                  (page)="pageEvent = changePage($event)"
-                 [showFirstLastButtons]="true">
+                 [showFirstLastButtons]="true"
+                 class="shadow">
   </mat-paginator>
 </div>
