[FEAT] Started /computer view

--- a/src/app/company/company-create/company-create.component.html
+++ b/src/app/company/company-create/company-create.component.html
@@ -1,6 +1,6 @@
 <div class="cardContainer">
   <div>
-    <h1>Create a new computer</h1>
+    <h1>Create a new company</h1>
 
     <mat-divider></mat-divider>
 
