--- a/src/app/company/company-update/company-update.component.html
+++ b/src/app/company/company-update/company-update.component.html
@@ -1,6 +1,6 @@
 <div class="cardContainer">
   <div>
-    <h1>Update computer</h1>
+    <h1>Update company</h1>
 
     <mat-divider></mat-divider>
 
