--- a/src/app/computer/computers/computers.component.html
+++ b/src/app/computer/computers/computers.component.html
@@ -1,25 +1,47 @@
-<div class="container" @staggerAnim>
+<!-- <div class="container" *ngIf="computers"> -->
+<div class="container" >
 
-  <div class="controlBar background-color-primary">
-    <div>
+  <div class="row align-items-center controlBar shadow">
+      <mat-form-field class="col-md-3 col-sm-12">
+          <mat-icon *ngIf="searchValue"
+                    matPrefix
+                    class="clearSearchIcon"
+                    aria-label="Clear search"
+                    (click)="clearSearch()"
+                    color="warn">clear</mat-icon>
 
-      <mat-form-field>
-        <mat-icon matPrefix>search</mat-icon>
-        <input matInput placeholder="Search">
+          <mat-icon *ngIf="!searchValue"
+                    matPrefix>search</mat-icon>
+
+          <input matInput placeholder="Search" [(ngModel)]="searchValue">
       </mat-form-field>
 
-      <mat-checkbox class="checkbox">Companies</mat-checkbox>
-      <mat-checkbox class="checkbox">Computers</mat-checkbox>
+      <div class="col-md-1 align-items-center">
+        <mat-checkbox class="checkbox">Companies</mat-checkbox>
+        <mat-checkbox class="checkbox">Computers</mat-checkbox>
+      </div>
 
-      <button mat-raised-button color="primary">Search</button>
-      <button mat-icon-button>
-        <mat-icon aria-label="Clear search" color="warn">clear</mat-icon>
-      </button>
-    </div>
-
-    <div class="controlBarRight">
-      <button mat-raised-button color="primary">Create a new computer</button>
-    </div>
-
+      <button class="col-md-1" mat-raised-button color="primary" (click)="search()">Search</button>
+      <span class="col-md-3"></span>
+      <button class="col-md-3 col-lg-2" mat-raised-button color="primary" (click)="create()">Create a new company</button>
   </div>
+
+  <!-- TODO : change everything above according to company version -->
+
+
+    <table class="customTable table table-bordered shadow">
+      <thead>
+        <th style="width: 66.6%">Name</th>
+        <th style="width: 16.6%">Company</th>
+        <th style="width: 16.6%">Introduced</th>
+        <th style="width: 16.6%">Discontinued</th>
+        <th style="width: 16.6%">Delete</th>
+      </thead>
+      <tr *ngFor="let computer of computers" app-computer [computer]="computer" (delete)="computerDeleted(computer)">
+      </tr>
+    </table>
+
+
+
+
 </div>
