--- a/src/app/company/company-delete/company-delete.component.html
+++ b/src/app/company/company-delete/company-delete.component.html
@@ -3,8 +3,8 @@
     <h2 mat-dialog-title>Delete a company</h2>
     <mat-dialog-content>Are you sure you want to delete {{company.name}} It will also delete all its {{company.numberOfComputers}} computers.</mat-dialog-content>
     <mat-dialog-actions align="end">
-      <button mat-button mat-dialog-close>No</button>
-      <button mat-button [mat-dialog-close]="true" (click)="delete(company)">Yes</button>
+      <button mat-raised-button mat-dialog-close >No</button>
+      <button mat-raised-button [mat-dialog-close]="true" (click)="delete(company)" color="warn">Yes</button>
     </mat-dialog-actions>
   </div>
 </div>
