--- a/src/app/company/companies/companies.component.html
+++ b/src/app/company/companies/companies.component.html
@@ -34,7 +34,7 @@
       <mat-icon>arrow_upward</mat-icon>
   </button>
 
-  <mat-paginator color="primary" #paginator *ngIf="pageEvent" [length]="pageEvent.length"
+  <mat-paginator #paginator *ngIf="pageEvent" color="primary" [length]="pageEvent.length"
                  [pageSize]="pageEvent.pageSize"
                  [pageSizeOptions]="pageSizeOptions"
                  (page)="pageEvent = changePage($event)"
