--- a/src/app/computer/computer.component.html
+++ b/src/app/computer/computer.component.html
@@ -1,11 +1,14 @@
 <td (click)="updateComputer()">{{computer.name}}</td>
-<td class="text-center" >
-  <button mat-raised-button color="primary"
-          matBadge="0" matBadgePosition="after"
-          matBadgeColor="warn">
-    <mat-icon>computer</mat-icon>
-  </button>
-</td>
+
+<td class="text-center" *ngIf="computer.manufacturer">{{computer.manufacturer}}</td>
+<td class="text-center" *ngIf="!computer.manufacturer">-</td>
+
+<td class="text-center" *ngIf="computer.introduced">{{computer.introduced}}</td>
+<td class="text-center" *ngIf="!computer.introduced">-</td>
+
+<td class="text-center" *ngIf="computer.discontinued">{{computer.discontinued}}</td>
+<td class="text-center" *ngIf="!computer.discontinued">-</td>
+
 <td class="text-center">
   <button mat-raised-button color="warn" (click)="deleteComputer()">
     <mat-icon>delete</mat-icon>
