--- a/src/app/computer/computers/computers.component.html
+++ b/src/app/computer/computers/computers.component.html
@@ -1,5 +1,4 @@
 <div class="container" *ngIf="computers">
-
   <div class="row align-items-center controlBar shadow">
       <mat-form-field class="col-md-3 col-sm-12">
           <mat-icon *ngIf="searchValue"
@@ -22,7 +21,7 @@
 
       <button class="col-md-1" mat-raised-button color="primary" (click)="search()">Search</button>
       <span class="col-md-3"></span>
-      <button class="col-md-3 col-lg-2" mat-raised-button color="primary" (click)="create()">Create a new company</button>
+      <button class="col-md-3 col-lg-2" mat-raised-button color="primary" (click)="create()">Create a new computer</button>
   </div>
 
     <table class="customTable table table-bordered shadow">
